tests/invalid/definite/Subtype_CompileFail_5.whiley
define scf5nat as int requires $ > 0

void System::main([string] args):
    (scf5nat f) x = (f:1)
    x.f = -1
    
